VCS meeting demo composition, some fixes to core library

--- a/js/devrig/vcs-rig.html
+++ b/js/devrig/vcs-rig.html
@@ -892,6 +892,8 @@ async function setupLiveVideo() {
 async function loadTestImages() {
   const exampleAssets = [
     { name: 'test_square', file: 'test_square_320px.png' },
+    { name: 'emoji_raised_hand', file: 'raised-hand_270b.png' },
+    { name: 'daily-logo-primary-darkground', file: 'daily-logo-primary-darkground.png' },
   ];
 
   const promises = [];
