Add test case for custom preset.

--- a/js/devrig/vcs-rig.html
+++ b/js/devrig/vcs-rig.html
@@ -1077,6 +1077,7 @@ function printApicallRec() {
 
   const apicallStr = "call.updateLiveStreaming({\n"
       + "  layout: {\n"
+      + "    preset: \"custom\",\n"
       + "    composition_params: " + json
       + "\n"
       + "  }\n"
