VCS: rename Label component to Text

--- a/js/devrig/vcs-rig.html
+++ b/js/devrig/vcs-rig.html
@@ -1022,7 +1022,7 @@ async function setupLiveVideo() {
 
 async function loadTestImages() {
   return {
-    'test_square': document.getElementById('image_test_square')
+    'test_square.png': document.getElementById('image_test_square')
   };
 }
 
