--- a/js/devrig/vcs-rig.html
+++ b/js/devrig/vcs-rig.html
@@ -19,6 +19,11 @@ body {
   margin: 0;
   padding: 0;
 }
+textarea {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 13px;
+  resize: none;
+}
 table {
   font-size: inherit;
   border-spacing: 0;
@@ -277,6 +282,9 @@ table {
   height: 30px;
   position: relative;
 }
+#controls .compInterface .params > div.tall {
+  height: 60px;
+}
 #controls .compInterface .params > div.status-experimental {
   font-style: italic;
 }
@@ -297,8 +305,17 @@ table {
   overflow: hidden;
   position: relative;
   top: 4px;
+  vertical-align: top;
 }
 #controls input {
+  background-color: transparent;
+  border: 1px solid var(--control-outline-color);
+  border-radius: 5px;
+  color: white;
+  padding: 2px;
+  outline: none;
+}
+#controls textarea {
   background-color: transparent;
   border: 1px solid var(--control-outline-color);
   border-radius: 5px;
@@ -309,6 +326,11 @@ table {
 #controls .compInterface .params input[type=text] {
   display: inline-block;
   width: calc(100% - var(--label-width-with-margin));
+}
+#controls .compInterface .params textarea {
+  display: inline-block;
+  width: calc(100% - var(--label-width-with-margin));
+  height: 50px;
 }
 #controls .compInterface .params select {
   display: inline-block;
@@ -950,6 +972,7 @@ function createParamsUI(compInterface, groupsContainerEl) {
       }
       let el;
       let posLeft = false;
+      let isTall = false;
       switch (type) {
         default:
           console.warn("** unsupported param type from composition: '%s'", type);
@@ -983,15 +1006,23 @@ function createParamsUI(compInterface, groupsContainerEl) {
           el.addEventListener('change', paramNumberEdited);
           break;
 
-        case 'text':
-          el = document.createElement('input');
-          el.setAttribute('type', 'text');
-          if (defaultValue || typeof defaultValue == 'number') {
-            el.setAttribute('value', defaultValue);
+        case 'text': {
+          const {textSizeHint} = paramDesc;
+          if (textSizeHint === 'long') {
+            el = document.createElement('textarea');
+            el.innerText = defaultValue || '';
+            isTall = true;
+            el.addEventListener('input', paramTextEdited);
+          } else {
+            el = document.createElement('input');
+            el.setAttribute('type', 'text');
+            if (defaultValue || typeof defaultValue == 'number') {
+              el.setAttribute('value', defaultValue);
+            }
           }
           el.addEventListener('change', paramTextEdited);
           break;
-
+        }
         case 'enum':
           el = document.createElement('select');
           createEnumUI(paramDesc.values || [], id, el);
@@ -1013,9 +1044,15 @@ function createParamsUI(compInterface, groupsContainerEl) {
         const label = document.createElement('label');
         label.innerText = displayName || '<No id provided>';
 
+        let className = '';
+
         if (status && status.length > 0) {
-          div.setAttribute('class', 'status-'+status);
+          className += 'status-'+status+' ';
         }
+        if (isTall) {
+          className += 'tall ';
+        }
+        div.className = className;
         
         if (posLeft) {
           div.appendChild(el);
